[package]
name = "backend_travel_planning"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features=["macros"]}
dotenv = "0.15.0"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
